add: stereo, light, air condition

--- a/HomeService/app/src/main/res/control/layout/activity_control.xml
+++ b/HomeService/app/src/main/res/control/layout/activity_control.xml
@@ -28,6 +28,7 @@
             android:orientation="vertical" />
 
         <Button
+            android:id="@+id/undo_command_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/space_medium"
